revisions before giving to inez

--- a/ch0-introduction/document.tex
+++ b/ch0-introduction/document.tex
@@ -6,6 +6,7 @@ How does ET (and transpiration especially) matter for the atmosphere?
 \item energy and moisture
 \item large latent heat of vaporization, ET can consume much of incoming energy - e.g. XX W/m2 or XX\% of incoming solar on a typical day in XX environment.
 \item effects on T, q, p, wind
+\item frame in terms of amplifying droughts, climate change
 \end{itemize}
 
 How do plants control transpiration?
