--- a/ch2-BL/discussion/discussion.tex
+++ b/ch2-BL/discussion/discussion.tex
@@ -1,23 +1,17 @@
 \section{Discussion and Conclusions}
 
-- in WRF, soil water stress does not vary by vegetation type, but instead is a property of the soil type.  However, plant water stress points ($\theta_{ref}$ and $\theta_{wilt}$ in the Feddes terminology) are known to differ among species; models should incorporate vegetation-type-specific $\theta_{ref}$ and $\theta_{wilt}$  to represent more accurately the variation in plant water stress and response to drought.
+Large-scale conversion of the northern California Coast Range forest from all-Douglas-fir to all-Pacific-madrone cools and moistens the summertime boundary layer when relative soil moisture is less than 0.3, a range typical of late summer at the ACRR (REF MET T SERIES FIGURE).   Two atmospheric models, one simple and one complex, simulate a cooling of $\sim$XX$^\circ$C in the mixed layer ($\sim$XX$^\circ$C near the surface) and a moistening of XX g/kg in the mixed layer (XX g/kg near the surface).  Pacific madrone cools and moistens the boundary layer when soils are dry because madrone stomatal conductance and thus transpiration remains higher at low soil moisture.  The greater transpiration consumes a larger fraction of net radiation in latent heat and reduces the sensible heat flux; because sensible heat is reduced, there is less direct heating of the boundary layer from the surface, and there is less entrainment of the hotter, drier free tropospheric air above the boundary layer.
 
-- state the magnitude of potential effect of species difference on T, Ts, humidity, PBL depth (for each model)
+The similar magnitude of change simulated by both the simple and the complex model supports the robustness of the results.  The 1-D boundary layer model does not include the effects of advection or subsidence and thus overestimates boundary layer height and temperature at the ACRR field site; however, the differences in temperature and humidity between the Douglas fir and Pacific madrone cases simulated by the simple model agree with the differences simulated by the complex model.  Even accounting for the effects of advection, complex topography, and subsidence in WRF, the hotter and drier conditions of the Douglas fir case relative to the Pacific madrone case are a robust result.
 
-- reiterate that these soil moisture values are typical for the dry season
+The differences in late summer temperature and humidity are due largely to the differences in stomatal response to soil water deficit (Figure \ref{fig:BL_testVPDtheta}).  Importantly, WRF does not represent vegetation-type differences in stomatal response to soil moisture; rather, the $\theta_{ref}$ and $\theta_{wilt}$ parameters depend only on soil type in WRF.  This inability to represent vegetation differences in water stress points prevents WRF from accurately representing the variation in land surface response to drought.
 
-- magnitude of difference in temperature is large enough to matter for ..., but small compared to synoptic variability
+While we incorporate sap-flow-derived parameters for stomatal response to soil moisture in both models, in the WRF tests we do not use sap-flow-derived parameters for the $VPD$ response.  In order to incorporate sap-flow-derived $VPD$ parameters into WRF in future work, measurements of the sapwood area to leaf area ratio are necessary (for converting $g_{s,max}$, representing conductance on a per-sapwood-area basis, to $1/RS$, representing stomatal conductance on a per-leaf-area basis).  The sap-flow-based $VPD$ parameters should also be re-estimated using $\Delta q$ instead of $VPD$, in accord with the WRF humidity stress function (Equation \ref{eqn:BL_WRFq}).  Nevertheless, the effect of differences in $VPD$ parameters is small when $VPD$ is high and soil is dry, as is the case in mid- to late-summer (Figure \ref{fig:BL_testVPDtheta}).  The effect of differences in $VPD$ parameters may be larger when soil is wet and $VPD$ is low to moderate, as in winter and spring; simulations of those conditions would require more accurate estimation of species-specific $VPD$ parameters.
 
-- uncertainty in VPD WRF parameters
+Using sap flow measurements to parameterize a regional climate model requires a significant scale jump, from the scale of whole trees and a single hillslope, to the scale of 2.7 km grid boxes and a 500 km x 500 km domain.  Such scale jumps are inherent in the measurement of evapotranspiration; however, further sap flow measurements of these species on slopes with different aspects, elevations, and species mixes are needed in order better to quantify the variability in stomatal response parameters and covariation with other environmental conditions.
 
-- compare the two models: slab ABL does not include effects of advection or subsidence, thus overestimates boundary layer height; even accounting for the effects of advection, complex topography, and subsidence in WRF, the hotter drier conditions of the Douglas-fir case are a robust result.
+The regional cases tested here are extreme scenarios involving the total conversion of the forest from one species (Douglas fir) to the other (Pacific madrone).  However, this may not be wholly unrealistic: Pacific madrones were likely more abundant in the past, due to regular controlled burning by indigenous people [REF].  It is possible that longer and more severe droughts in a warmer future climate could cause a shift of from Douglas fir to Pacific madrone, if fires become more frequent and if Douglas firs are less tolerant of drought.  Moreover, forest management stakeholders are actively discussing controlling the encroachment of Douglas fir in this region [William Dietrich, personal communication]. This study demonstrates that such regional-scale species shifts could have regional-scale impacts on air temperature and humidity in the dry season.
 
-- acknowledge the scale jumps in using sap flow measurements to parameterize a regional climate model; also emphasize that this is an interesting and novel contribution of this work, to integrate field observations to test atmospheric feedbacks of species-specific stomatal behavior
+Cooling from a madrone forest has implications for ecosystems and humans.  Temperature and humidity decreases of XX near the surface, such as those simulated with an all-madrone forest, would reduce VPD by XX.  Such VPD decreases could increase carbon fixation by increasing stomatal conductance (cf. VPD RESPONSE FIGURE).  The reduction in evaporative demand might also reduce the drying of surface litter and dead plant matter, thus potentially reducing fire risk.  Near-surface cooling and reduction in evaporative demand would also be relevant to stream temperature and ecology, human health, and agriculture.
 
-- acknowledge that these are extreme scenarios - total conversion of forest to one species or the other; however, there is some indication that species composition favored madrones more heavily in the past (fire regime) [REF], and possible that longer and/or more severe droughts in a warmer future climate could cause future shift of species composition.  this study demonstrates that regional-scale species shifts could have regional-scale impacts on near-surface temperature in the dry season.
-
-- also, demonstrates the sensitivity of the boundary layer to stomatal dynamics, and underscores the importance of understanding species- and vegetation-type-differences in stomatal response to VPD and theta
-
-- mention that we are not satisfied with this representation of the subsurface for this geological unit/region
-
-- how Douglas fir suppressed transp might amplify hotter heat waves in future climate (cite Hansen paper on shift of temperature pdf?); transpiration will not increase with increasing VPD, and soils may dry below DF threshold earlier in the summer
+In this study, we integrate tree-scale field observations with physical atmospheric models to test regional atmospheric feedbacks of species-specific stomatal behavior.  We demonstrate the sensitivity of the boundary layer to stomatal dynamics and show that a regional-scale change in dominant evergreen tree species can change summertime near-surface temperatures by $\sim$2$^\circ$C.  This result underscores the importance of understanding species- and vegetation-type-differences in stomatal response to soil moisture and VPD.
