--- a/ch2-BL/document.tex
+++ b/ch2-BL/document.tex
@@ -1,4 +1,4 @@
-\chapter{Boundary Layer Feedbacks}
+\chapter{Regional-scale forest conversion from Douglas fir to Pacific madrone cools and moistens the atmospheric boundary layer}
 \label{c.BL}
 
 Abstract.
