--- a/ch2-BL/methods/methods.tex
+++ b/ch2-BL/methods/methods.tex
@@ -56,7 +56,7 @@ Free troposphere conditions (needed for $\Gamma_{\Theta}$ and $\Gamma_Q$ in Equa
 
 \begin{figure}[here]
 \includegraphics[width=1\textwidth]{ch2-BL/figures/fitted_lapserates_theta_Q_onefig.png}
-\caption{}
+\caption{Symbols: potential temperature ($\Theta$, left) and specific humidity ($Q$, right) from Oakland Airport soundings at 04:00 local time, averaged for July and August 2009-2011 and binned by height.  Error bars show one standard deviation.  Lines: piecewise linear approximations to the lapse rates for $\Theta$ and $Q$, which are used in the 1-D boundary layer model.}
 \label{fig:BL_LapseRates}
 \end{figure}
 
@@ -76,7 +76,8 @@ Relative soil moisture $\theta_{rel}$ & 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0
 \end{table}
 
 \subsection{Regional climate model}
-In order to further test the impact of these two tree species on the atmospheric boundary layer, we use WRF-Noah [Skamarock \textit{et al.}, 2008], a three-dimensional, non-hydrostatic regional climate model (Weather Research and Forecasting, or WRF) with terrain-following vertical coordinates and a coupled land surface model (Noah).  In WRF, the conservation equations for momentum, mass, and energy are solved numerically to calculate the temporal evolution of atmospheric state variables, including air temperature, pressure, humidity, and wind velocity.  
+\label{sec:BL_WRFdesc}
+In order to further test the impact of these two tree species on the atmospheric boundary layer, we use WRF-Noah [Skamarock \textit{et al.}, 2008], a three-dimensional, non-hydrostatic regional climate model (Weather Research and Forecasting, or WRF) with terrain-following vertical coordinates and a coupled land surface model (Noah).  In WRF, the conservation equations for momentum, mass, and energy are solved numerically to calculate the temporal evolution of atmospheric state variables, including air temperature, pressure, humidity, and wind velocity.  WRF has a range of parameterization options for radiation, turbulence treatment via planetary boundary layer (PBL) schemes or large-eddy simulation closures, cloud microphysics, convection, bottom boundary fluxes of water vapor and heat, and lateral boundary forcing.  
 
 \begin{table}
 \begin{tabular}{l l}
@@ -104,7 +105,7 @@ Lateral boundary & 5 grid points \\
 \label{table:BL_paramschemes}
 \end{table}
 
-Subgrid processes, including radiation, planetary boundary layer (PBL) turbulence, cloud microphysics, and convection, are parametrized in WRF, and the parametrization schemes used here are listed in Table \ref{table:BL_paramschemes}.  The ACM2 PBL scheme was used because of its ability to represent both convective regimes (non-local transport) and shear-dominated regimes (local transport) [Pleim, 2007], and because of its good performance in other WRF studies [CITATIONS including Marjanovic].
+The parametrization schemes used here are listed in Table \ref{table:BL_paramschemes}.  Most schemes chosen are the default settings for realistic (non-idealized) simulations, with the exception of the ACM2 PBL scheme. The ACM2 scheme is used because of its ability to represent both convective regimes (non-local transport) and shear-dominated regimes (local transport) [Pleim, 2007], and because of its good performance in other WRF studies [CITATIONS including Marjanovic].
 
 \begin{table}
 \begin{tabular}{ l c c c c c c c }
@@ -118,14 +119,20 @@ d02 & 2.7 & 2.7 & 175 & 175 & 45 & 15 & 2 min\\
 \label{table:BL_domains}
 \end{table}
 
-The tests are run with two nested domains centered on the northern Coast Range (Figure XX).  The outer domain (d01) provides the lateral boundary conditions for the inner domain (d02), and the inner domain states are fed back to the outer domain throughout the region coincident with the inner domain.  Two-way nesting increases model accuracy, particularly in regions of complex terrain [CITATIONS].  The domain resolutions and dimensions are listed in Table \ref{table:BL_domains}.  The lateral boundaries of the outer domain are forced with NCEP Eta 212 grid (40 km) operational analysis [NCEP, 1998] for the period of 2009-08-16 00:00 to 2009-08-30 00:00, with the first 32 hours discarded as model spin-up.  This time period is rain-free and sunny at the Angelo Reserve and represents the mid- to late-summer season when soil is very dry and incoming radiation is still strong (cf. Chapter \ref{c.sapflow} Figure XX - rivendell met time series).
+\begin{figure}[here]
+\includegraphics[width=1\textwidth]{ch2-BL/figures/domain_map_cropped.png}
+\caption{WRF domains over northern California.  The gray outlines show the domain boundaries; d01 is the outer nest, and d02 is the inner nest.  Left: topographic elevation; right: red shows the test region where vegetation parameters are modified.}
+\label{fig:BL_domain}
+\end{figure}
+
+The tests are run with two nested domains centered on the northern Coast Range (Figure \ref{fig:BL_domain}).  The use of two nests enables gradual down-scaling of the coarse lateral forcing to the high resolution needed to resolve flow over the Solano wind farm.  We adopt a conservative nesting grid ratio of 3:1.  The outer domain (d01) provides the lateral boundary conditions for the inner domain (d02), and the inner domain states are fed back to the outer domain throughout the region coincident with the inner domain.  Two-way nesting increases model accuracy, particularly in regions of complex terrain [CITATIONS].  The domain resolutions and dimensions are listed in Table \ref{table:BL_domains}.  The lateral boundaries of the outer domain are forced with NCEP Eta 212 grid (40 km) operational analysis [NCEP, 1998] for the period of 2009-08-16 00:00 to 2009-08-30 00:00, with the first 32 hours discarded as model spin-up.  This time period is rain-free and sunny at the Angelo Reserve and represents the mid- to late-summer season when soil is very dry and incoming radiation is still strong (cf. Chapter \ref{c.sapflow} Figure XX - rivendell met time series).
 
 The two hypothetical forests (all-Douglas-fir and all-Pacific-madrone) are tested in the northern Coast Range region highlighted in Figure XX.  In this region, dummy land use and soil types are used, and the VPD and soil moisture stomatal response parameters of this dummy type are modified according to the test case, as described below.  Radiative properties, leaf area, and rooting depth of the dummy type are held constant among the test cases, using the ``Evergreen Needleleaf Forest'' values.  Outside of the test region, observed topography and USGS vegetation and soil types are used.
 
 \begin{table}
 \begin{tabular}{ l p{3cm} p{3cm} p{2cm} p{3cm} }
 \hline
-Vegetation type & $\theta_{ref}$ (m$^3$/m$^3$) & $\theta_{wilt}$ (m$^3$/m$^3$) & RS (s/m) & HS (kg/kg)\\ \hline
+Vegetation type & $\theta_{ref}$ (m$^3$/m$^3$) & $\theta_{wilt}$ (m$^3$/m$^3$) & $RS$ (s/m) & $HS$ (kg/kg)\\ \hline
 %ENF & 0.329 (loam) & 0.066 (loam) & 125 & 47.35\\
 Douglas fir & 0.156 & 0.075 & 125 (ENF) & 47.35 (ENF)\\
 %EBF & 0.329 (loam) & 0.066 (loam) & 150 & 41.69\\
@@ -133,14 +140,14 @@ Pacific madrone & 0.105 & 0.047 & 150 (EBF) & 41.69 (EBF)\\
 %Pacific madrone 2 & 0.105 & 0.047 & 300 & 20.\\
 \hline
 \end{tabular}
-\caption{Parameters for Noah's Jarvis formulation of stomatal conductance, by vegetation type.  RS is the Noah minimum stomatal resistance parameter in the Jarvis formulation. HS is the Noah scaling factor for the specific humidity deficit in the Jarvis humidity stress function (Equation XX).  ENF is the USGS Evergreen Needleleaf Forest land use type; EBF is the USGS Evergreen Broadleaf Forest land use type.}
+\caption{Parameters for Noah's Jarvis formulation of stomatal conductance, by vegetation type.  $RS$ is the Noah minimum stomatal resistance parameter in the Jarvis formulation. $HS$ is the Noah scaling factor for the specific humidity deficit in the Jarvis humidity stress function (Equation XX).  ENF is the USGS Evergreen Needleleaf Forest land use type; EBF is the USGS Evergreen Broadleaf Forest land use type.}
 \label{table:BL_NoahJarvisparams}
 \end{table}
 
 \begin{table}
 \begin{tabular}{ l p{6cm} p{7cm} }
 \hline
-Run ID & VPD parameters (RS, HS) & Soil moisture parameters ($\theta_{ref}$, $\theta_{wilt}$)\\ \hline
+Run ID & VPD parameters ($RS$, $HS$) & Soil moisture parameters ($\theta_{ref}$, $\theta_{wilt}$)\\ \hline
 vDF-sDF & Douglas fir (ENF) & Douglas fir\\
 %vEBF-sMD & EBF & Pacific madrone\\
 vMD-sMD & Pacific madrone (EBF) & Pacific madrone\\
@@ -161,14 +168,15 @@ The empirical function representing humidity stress is similar to the asymptotic
 
 \begin{equation}
 f_{\Delta q} = \frac{1}{1+HS \Delta q},
+\label{eqn:BL_WRFq}
 \end{equation}
 where $\Delta q$ is the difference between saturated specific humidity (kg/kg) and actual specific humidity.
 
 The variation of $1/rsmin * f(\Delta q)$ with $\Delta q$, using USGS parameters for Evergreen Needleleaf Forest (ENF, COLOR) and Evergreen Broadleaf Forest (EBF, COLOR), are shown in Figure XX (top panel).  For comparison, the variation of $g_{s, max}/\alpha * f(VPD)$ with VPD, calculated using sap-flow-derived species averaged parameters for Douglas fir and Pacific madrone (Chapter \ref{c.sapflow}, Table XX), is also shown in Figure XX (bottom panel).  In both the WRF and the sap-flow-derived parameters, the Douglas-fir/ENF case has higher stomatal conductance at low VPD, and the stomatal conductance of Douglas fir and Pacific madrone are close at high VPD.  For the tests presented here, we use the ENF and EBF parameters to represent the species difference in humidity response.  We do not use the sap-flow-derived parameters for several reasons: (1) it is not straightforward to translate the sap-flow-based $g_{s,max}/\alpha$ to $RS$, because $g_{s,max}/\alpha$ refers to stomatal conductance normalized by sapwood area, whereas $RS$ represents resistance on a per-unit-leaf-area basis; (2) $D_o$ is in units of $VPD$ (kPa), while $HS$ is in units of inverse specific humidity ($q$, kg/kg), and the relation between $VPD$ and $q$ varies with temperature; and (3) the atmospheric boundary layer effects when soils are dry depend much more on species differences in soil moisture response than on species differences in humidity response (Figure \ref{fig:BL_testVPDtheta}, below); as such, the impact of errors in humidity response parameters on results from hot summer days is expected to be small.
 
 \begin{figure}[here]
-\includegraphics[width=1\textwidth]{ch2-BL/figures/theta_params.png}
-\caption{}
+\includegraphics[width=0.9\textwidth]{ch2-BL/figures/theta_params.png}
+\caption{Solid lines: sigmoid $f_{\theta}$ functions (Equation XX) for Douglas fir (blue) and Pacific madrone (green) using the species-averaged parameters from Table XX.  Dashed lines: linear regression to $f_{\theta}$ between 0.05 and 0.95.  Symbols: extrapolation of linear regression to $f_{\theta}=0$ and $1$.}
 \label{fig:BL_FeddesParams}
 \end{figure}
 
