--- a/ch3-wind/tex/discussion/discussion.tex
+++ b/ch3-wind/tex/discussion/discussion.tex
@@ -10,8 +10,10 @@ This study is a prototype, and several caveats and uncertainties bear mentioning
 
 There are also uncertainties related to the model representation of land surface heat and moisture fluxes.  We expect the effect of letting soil moisture evolve over the day, rather than holding it fixed at every timestep, to be small, because the changes in soil moisture are small (Figure \ref{fig:windSol_forcings}); moreover, allowing soil moisture to evolve dynamically is comparable to initializing a day-ahead forecast with erroneous soil moisture, in which case soil moisture would also evolve over the day.  The results probably depend strongly on model land use and land cover, which determine albedo, plant transpiration dynamics, and roughness; the results would have been different if we had modified the land use distribution.  Similarly, the results depend on the accuracy of the Noah LSM land cover and soil hydrology parameterizations; Chapter XX of this dissertation illustrates that the different stomatal dynamics of different plant species can change boundary layer air temperature, which the present chapter shows is an important control on the pressure gradients driving near-surface winds.
 
+The model is an imperfect representation of the world; it captures many of the important processes, but we do not contend that it represents land surface fluxes perfectly.  In this study, we have sought both to investigate the real-world physical sensitivity of the winds to soil moisture, to the degree possible given the model errors, and also to characterize the sensitivity within the model itself.  Even if the internal model sensitivity is not fully realistic, this tool is in common usage in wind energy forecasting, and thus it is important to understand the sensitivity of the tool to the inputs.
+
 Soil moisture in California varies both because of interannual variability in precipitation, causing anomalously wet or dry soils in the unmanaged mountain regions, and because of large-scale irrigation in the Central Valley.  The area represented by the ``CV" region in this study is certainly larger than the irrigated agricultural land area, and as such, the sensitivity of Solano winds to actual irrigation will be lower.  However, these results show that correct estimation of soil moisture in both the agricultural and non-agricultural areas of the Central Valley is important for accurate Solano wind forecasts.  More broadly, these results illustrate the sensitivity of winds in this NWP model, WRF, to soil moisture; because NWP models are widely used in wind energy forecasting, the accuracy of soil moisture input information is necessary for accurate energy resource forecasts, at least at sites like Solano.  The effect of soil moisture is expected to be strongest when local and regional land surface heating drives winds, i.e. during the warm season with weak to moderate synoptic winds.  In California, these conditions overlap with the season of greatest wind energy production, making soil moisture an important variable in wind energy forecasts.  We also note that, while Solano winds are not strongly sensitive to Coast Range or Sierra Nevada soil moisture, other potential wind farm locations are strongly affected, including the northern and southern Central Valley (cf. Figure \ref{fig:windSol_WindMapsRg}); future development of wind farms in these locations would benefit from measurements to constrain land surface energy fluxes in the Coast Range and Sierra Nevada.
 
 Studies of wind energy sensitivity to regional soil moisture can help constrain which measurements might improve wind energy forecasts.  Soil moisture itself is difficult to measure at large scales and at the necessary depth [CITATION], and small-scale heterogeneity complicates the scaling-up of point measurements.  As such, it may be more feasible and productive to measure a related observable variable, such as land surface temperature (detected remotely from towers or aircraft using thermal imaging) or even the near-surface air pressure difference between the NCV region and the central coast, as proxies for soil moisture and the related land-surface heating.  These measurements could be assimilated into NWP models using frameworks such as \textbf{CITE SOME LAND DATA ASSIMILATION PAPER}, or they could be integrated into statistical or machine-learning post-processing of NWP model output.  Conducting model sensitivity studies such as this one could help constrain the regions to which the wind forecast at a given site is most sensitive and thus the regions with the greatest potential return on investment in measurement efforts.
 
-\textit{Close with something here: refer back to motivation of wind variability and utility-scale integration.  Better day-ahead to hour-ahead forecasts could reduce costs, and at many wind farm locations with a land-surface-heating component to driving the wind, improvements in soil moisture input information could help increase the accuracy of those forecasts.  Help utilities manage the variability of wind energy cost-effectively and decrease the cost of wind energy.}
+%\textit{Close with something here: refer back to motivation of wind variability and utility-scale integration.  Better day-ahead to hour-ahead forecasts could reduce costs, and at many wind farm locations with a land-surface-heating component to driving the wind, improvements in soil moisture input information could help increase the accuracy of those forecasts.  Help utilities manage the variability of wind energy cost-effectively and decrease the cost of wind energy.}
