--- a/thesis.tex
+++ b/thesis.tex
@@ -99,9 +99,9 @@ This dissertation was typeset using the
 
 \linespread{1.6}\selectfont
 
-%\include{ch0-introduction/document}
+\include{ch0-introduction/document}
 \include{ch1-sapflow/document}
 \include{ch2-BL/document}
-%\include{ch3-wind/document}
+\include{ch3-wind/document}
 \bibliography{thesis}{}
 \end{document}
